--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "firebase": "^9.0.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-addons-update": "^15.6.3",
